--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
  <head>
-  <title>Hydra - </title>
+  <title></title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <meta charset="UTF-8">
@@ -9,8 +9,7 @@
   <script async="true" src="app.js"></script>
   <style>
     @import url('//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css');
-  </style>
-
+</style>
  </head>
  <body id="main" style="min-height: 800px; padding-top: 70px;">
  </body>
