assume app is served from /

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
   <meta charset="UTF-8">
   <!--link href="/static/favicon.png" rel="icon" type="image/png" /-->
-  <script async="true" src="app.js"></script>
+  <script async="true" src="/app.js"></script>
   <style>
     @import url('//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css');
 </style>
