Twitter Bootstrap -> Material Design Lite

--- a/src/index.html
+++ b/src/index.html
@@ -7,10 +7,7 @@
   <meta charset="UTF-8">
   <!--link href="/static/favicon.png" rel="icon" type="image/png" /-->
   <script async="true" src="/app.js"></script>
-  <style>
-    @import url('//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css');
-</style>
  </head>
- <body id="main" style="min-height: 800px; padding-top: 70px;">
+ <body id="main">
  </body>
 </html>
